traces/bug_717.txt
src/femlib/Mesh3dn.cpp:1335: error: DEAD_STORE
  The value written to &nomove (type _Bool) is never used.
Showing all 1 steps of the trace


src/femlib/Mesh3dn.cpp:1335:21: Write of unused value
1333.                   {
1334.                       R coef1 = 1-cf;
1335.                       nomove= (cf<1e-10);
                            ^
1336.                       dt        = dt*coef1;// temps restant
1337.                   }
